force-app/main/default/objects/Merchant_Application__c/Merchant_Application__c.object-meta.xml
<CustomObject>
    <label>Merchant Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>