force-app/main/default/objects/Merchant_Application__c/fields/Card_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Card_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Assigned</label>
    <type>Checkbox</type>
</CustomField>