force-app/main/default/objects/Merchant_Application__c/fields/Card_ID__c.field-meta.xml
<CustomField>
    <fullName>Card_ID__c</fullName>
    <label>Card ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>